# hft-simulation-engine

./: CMakeLists.txt  CMakePresets.json  Makefile  README.md
documentation/: phase1.md  project-tooling.md
include/tcp_server/: tcp_server.h
src/: main.cpp  printer.cpp  printer.h
src/tcp_server/: tcp_server.cpp
